src/ui/snapshots/cctop__ui__snapshot__context_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲         $ MODEL          PERM   ! HOST       BRANCH       PROJECT    │
│●    now    $18.42 opus-4-1       ─        local      ─            Fix the ch…┃
│●     7m     $2.87 sonnet-4-5     ─        local      ─            api        │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Info  Performance  Processes  Tool Activity  Subagents  Cost  Config  Context╮
│Window  151.0K of 200.0K   90% to compaction   16.0K left                     ┃
│                                                                              ┃
│███████████████████████████████████████████████████████████░░░░░░┊░░░░░░░░░░░░│
│                                                                              │
│█ Tool output     71.0K  36%   █ Startup         24.0K  12%                   │
│█ Assistant text  19.0K  10%   █ Tool input      12.0K   6%                   │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
