src/ui/snapshots/cctop__ui__snapshot__dashboard_styles.snap
---
source: src/ui/snapshot.rs
expression: styles(&buffer)
---
AAAAAAAAAAAAABCCCCCCCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBDDDDDDDDDD
BEEEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCHHHHHHIIIDHHHHHHHHHHHHHHHDDDDDIIIIIIIIIIIIIIIIIDDDDB
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCJDDDKKKKKKDDDDDDDDDDD..............................B
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCJJJJJJJ...................G........................B
BCCCCCCCCCCCFFFFFFFFFFFFFDDDDDDDDDDDDDDDDDDDD.............CCCCCCCCCCJJJJJJDDDDDDDDDDDDDDDDDDDDDD.......................B
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BEEEEEEEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB
BLLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB
BMM.NNNNN........MMMMMMMMM.KKKKKK.KKKKK.OOOOOOOOOOOOOO............PPPPPP...PPPPPPPPPP..................................B
BDD.QQQQQ........KKKKKKKKK.PPPPPP.PPPPP.OOOOOOOOOOOOOO............PPPPPP...PPPPPPPPPP..................................B
BDD.RRRRR........MMMMMMMMM.PPPPPP.PPPPP.SSSSSSSSSSSSSS............PPPPPP...PPPPPPPPPP..................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBDDDDBBDDDDDDDDDDDBBTTTTTTTTTBBDDDDDDDDDDDDDBBDDDDDDDDDBBDDDDBBDDDDDDBBDDDDDDDBBDDDDDDDBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BCCCC.DDDDDDDDDDDDDDDDDDDDDDDDDDDD.....................................................................................B
BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA....................................................................................B
BJJJJJJJ..KKKKKK..JJJJJJJJ..JJJJJJJJJJJJJJJJJJJ........................................................................B
BUUUUUUU..KKKKKK..UUUUUUUU..UUUUUUUUUUUUUUUUUU.........................................................................B
BUUUUUUU..KKKKKK..UUUUUUUU..UUUUUUUUUUUUUUUU...........................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
B......................................................................................................................B
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBEEEEEEEEEEEB
BCCCCCCCDDDDDDDDD............................................CCCCCCDDDDDDDDD...........................................B
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
VVDDDDDDVDDDDDDDDDVDDDDDDDDVVVVVDDDDDDVDDDDDDDDVDDDDDDDDVDDDDDDVDDDDDDDDDVVVDDDDDDDVDDDDDDVDDDDDD...............DDDDDDD

A fg=White bg=Indexed(236) mod=BOLD
B fg=Indexed(60) bg=Reset mod=NONE
C fg=Indexed(75) bg=Reset mod=BOLD
D fg=Indexed(245) bg=Reset mod=NONE
E fg=Indexed(179) bg=Reset mod=BOLD
F fg=Indexed(221) bg=Reset mod=BOLD
G fg=Indexed(236) bg=Reset mod=NONE
H fg=Indexed(75) bg=Reset mod=NONE
I fg=Indexed(109) bg=Reset mod=NONE
J fg=White bg=Reset mod=BOLD
K fg=Indexed(114) bg=Reset mod=NONE
L fg=Indexed(82) bg=Indexed(236) mod=BOLD
M fg=Indexed(221) bg=Reset mod=NONE
N fg=White bg=Reset mod=NONE
O fg=Indexed(173) bg=Reset mod=NONE
P fg=Indexed(238) bg=Reset mod=NONE
Q fg=Indexed(251) bg=Reset mod=NONE
R fg=Indexed(244) bg=Reset mod=NONE
S fg=Indexed(110) bg=Reset mod=NONE
T fg=Indexed(179) bg=Reset mod=BOLD | UNDERLINED
U fg=Indexed(250) bg=Reset mod=NONE
V fg=Black bg=Indexed(75) mod=BOLD
