src/ui/snapshots/cctop__ui__snapshot__delete_confirm_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲╭ Delete session? ───────────────────────────────────────────╮JECT    │
│●     7m│  docs                                                      │        │
│○     3h│  33333333-cccc-4000-8000-000000000003                      │s       ┃
╰────────│                                                            │────────╯
╭ Info  T│  This permanently removes the transcript from disk.        │────────╮
│This tra│                                                            │        │
│        │  [y] delete    [n / Esc] cancel                            │        │
│        ╰────────────────────────────────────────────────────────────╯        │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
