src/ui/snapshots/cctop__ui__snapshot__help_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│L╭ Help ────────────────────────────────────────── cctop VERSION            ╮ │
│T│Start here                                                                ┃ │
│T│  Enter            Everything you can do to this row, in one menu         ┃ │
│A│  ?  F1            This page                                              ┃ │
╰─│  ,                The settings tab: every setting, view choice and       │─╯
╭ │keybind                                                                   │─╮
│ │  q  F10           Quit                                                   │ │
│●│  +                Add a Claude account (runs claude setup-token)         │…┃
│●│                                                                          │ │
╰─│Navigation                                                                │─╯
╭ │  ↑/k  ↓/j         Move between sessions                                  │t╮
│R│  PgUp / PgDn      Page through the list                                  │ │
│ │  Ctrl+U / Ctrl+D  Half a page up / down                                  │ │
│ │  g / G  Home / End Jump to first / last                                  │ │
│ │  n / N            Next / previous search match (wraps)                   │ │
│ │  b                Jump to the session that rang last                     │ │
│ │  f                Follow mode: keep the selection centered               │ │
╰─│                                                                          │─╯
╭ │Acting on the selected session                                            │ ╮
│C│  a                Open its terminal in a tab                             │ │
╰─╰ 1–19 of 141   ↑↓ scroll ─────────────────────────────────────────────────╯─╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
